--- a/index.html
+++ b/index.html
@@ -33,14 +33,12 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      /*background-color: #25193a;*/
-      background-image: url(cd.png);
+      background-image: url(cd.PNG);
     }
     
     .content {
       display: flex;
       align-items: center;
-      /* background-color: #25193a; */
       background-size: cover;
       height: 100vh;
     }
@@ -54,7 +52,6 @@
       font-size: 14vh;
       margin-bottom: 20px;
       font-family: "glitch";
-      /*color: #7387dd;*/
       color: #C0FFFF;
     }
     
