--- a/projects.html
+++ b/projects.html
@@ -126,11 +126,11 @@
       <div class="NetTracer">
         <h2>WAF Bypass and Joomla File Exposure</h2>
 
-        <img src="normal.PNG">
+        <img src="normal.png">
         <br>
         <br>
         <br>
-        <img src="bypass.PNG">
+        <img src="bypass.png">
 
 
         <p>
