changed temp text

--- a/education.html
+++ b/education.html
@@ -83,7 +83,7 @@
       <ul>
         <li>Calculus 3</li>
         <li>Physics 2</li>
-        <li>Insert computer classes here</li>
+        <li>Digital System Fundamentals</li>
       </ul> 
 
       <hr>
