Added CSEC stuff

--- a/education.html
+++ b/education.html
@@ -103,7 +103,7 @@
       <ul>
         <li>Dean's Honors List</li>
         <li>AP Scholar</li>
-        <li>FEDvte Public Courses</li>
+        <li>CyberPatriot Mentor</li>
       </ul> 
 
       <hr>
